Streamlined and tidy up of codebase (#104)
Mostly removing code duplication, introducing Dependency stuff, streamlining on sink and source (and remove supplier and stuff like that).